manifests/02-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  labels:
    app.kubernetes.io/name: eg
    app.kubernetes.io/part-of: envoy-gateway-poc
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
