manifests/03-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-poc
  labels:
    app.kubernetes.io/name: eg-poc
    app.kubernetes.io/part-of: envoy-gateway-poc
spec:
  gatewayClassName: eg
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eg-poc-route
  labels:
    app.kubernetes.io/name: eg-poc-route
    app.kubernetes.io/part-of: envoy-gateway-poc
spec:
  parentRefs:
  - name: eg-poc
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1
    backendRefs:
    - name: app-v1
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /v2
    backendRefs:
    - name: app-v2
      port: 80
